[tool.poetry]
name = "pandas_multiindex_tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn-pandas = "^2.2.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
notebook = "^6.4.5"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
